--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -6,6 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/lista">Lista de personas</a>
+      <a mat-list-item routerLink="/nuevo">Nueva persona</a>
       <a mat-list-item routerLink="/arbol">Ver Arbol</a>
       <a mat-list-item routerLink="/dd">Ver Drag & Drop</a>
     </mat-nav-list>
